--- a/_sass/_project-preview.scss
+++ b/_sass/_project-preview.scss
@@ -1,12 +1,12 @@
 .project-preview {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     margin-bottom: 2em;
   }
   
   .project-preview img {
     margin-right: 20px;
-    max-width: 150px;
+    max-width: 100px;
     height: auto;
     border-radius: 8px;
   }
@@ -16,3 +16,10 @@
     flex-direction: column;
   }
   
+  .project-text h2 {
+    margin: 0 0 0.25em 0; // Tight space below title
+  }
+  
+  .project-text p {
+    margin: 0; // Remove extra space above and below the paragraph
+  }
