--- a/_sass/_img-with-caption.scss
+++ b/_sass/_img-with-caption.scss
@@ -1,3 +1,11 @@
+.img-caption-row {
+  display: flex;
+  justify-content: center;
+  gap: 2em; /* space between the two images */
+  flex-wrap: wrap; /* allows them to stack on small screens */
+  margin: 2em 0;
+}
+
 .img-with-caption {
     text-align: center;
     max-width: 400px;
