--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,10 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    <script src="https://cdn.jsdelivr.net/npm/medium-zoom@1.1.0/dist/medium-zoom.min.js"></script>
+    <script>
+      mediumZoom('[data-zoomable]');
+    </script>
   </head>
 
   <body>
